setup gradle with valhala ea 27