@@ -13,15 +13,16 @@ dependencies {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(25))
+        languageVersion.set(JavaLanguageVersion.of(27))
     }
 }
 
 tasks.withType<JavaExec> {
-    jvmArgs("--enable-native-access=ALL-UNNAMED")
+    jvmArgs("--enable-native-access=ALL-UNNAMED", "--enable-preview")
 }
 
 tasks.withType<JavaCompile> {
     val processorOutput = rootProject.layout.buildDirectory.dir("classes/java/processor").get().asFile
     options.annotationProcessorPath = files(processorOutput) + rootProject.configurations.runtimeClasspath.get()
+    options.compilerArgs.add("--enable-preview")
 }
